--- a/ui/main.ui
+++ b/ui/main.ui
@@ -183,6 +183,38 @@
     <bool>false</bool>
    </property>
   </widget>
+  <widget class="QPushButton" name="btnReNew">
+   <property name="geometry">
+    <rect>
+     <x>1310</x>
+     <y>660</y>
+     <width>50</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+    background-color: transparent; /* Làm nền trong suốt */
+    border: none; /* Xóa đường viền */
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../image/ic_renew.png</normaloff>../image/ic_renew.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>50</width>
+     <height>50</height>
+    </size>
+   </property>
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
