Complete the chase and renew functionality

--- a/ui/description.ui
+++ b/ui/description.ui
@@ -109,7 +109,7 @@ QPushButton:pressed {
      <property name="text">
       <string>
     &lt;div style=&quot;line-height: 2;&quot;&gt;
-        An thức dậy muộn và nhận ra mình đã trễ giờ học. Để đến trường kịp, cô phải vượt qua một mê cung đầy thử thách, với những ngã rẽ khó đoán. Đặc biệt, con chó hung dữ đang truy đuổi, khiến mỗi bước đi của An trở nên căng thẳng và quyết định. Liệu bạn có thể giúp An tìm ra con đường nhanh nhất, né tránh mọi hiểm nguy để đến trường đúng giờ?
+        An thức dậy muộn và nhận ra mình đã trễ giờ học. Để đến trường kịp, cô phải vượt qua một mê cung đầy thử thách, với những ngã rẽ khó đoán. Đặc biệt, con chó hung dữ đang truy đuổi, khiến mỗi bước đi của An trở nên căng thẳng. Liệu bạn có thể giúp An tìm ra con đường nhanh nhất, né tránh mọi hiểm nguy để đến trường đúng giờ?
     &lt;/div&gt;
     </string>
      </property>
