--- a/ui/main.ui
+++ b/ui/main.ui
@@ -25,6 +25,9 @@
      <height>700</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
   </widget>
   <widget class="QLabel" name="lblTime">
    <property name="geometry">
