Thêm đồng hồ đếm thời gian. Sửa phần win.ui có kết quả thời gian đếm. Còn lỗi đồng hồ đếm bị chậm. Mọi người chạy thử xem có bị chậm hong

--- a/ui/start.ui
+++ b/ui/start.ui
@@ -37,7 +37,7 @@
   </property>
   <property name="styleSheet">
    <string notr="true">QMainWindow {
-    background-image: url('C:/TTNT_MazeGame/image/background.png');
+    background-image: url('image/background.png');
 	background-repeat: no-repeat; /* Không lặp lại ảnh */
 	background-position: center; /* Căn giữa */
 	background-size: cover; /* Ảnh bao phủ toàn bộ widget */
