--- a/ui/level.ui
+++ b/ui/level.ui
@@ -19,10 +19,10 @@
   <widget class="QLabel" name="lblTime">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>170</y>
-     <width>251</width>
-     <height>81</height>
+     <x>550</x>
+     <y>260</y>
+     <width>271</width>
+     <height>101</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -38,14 +38,14 @@
 }</string>
    </property>
    <property name="text">
-    <string>LEVEL</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:30pt;&quot;&gt;CHOOSE&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnEasy">
+  <widget class="QPushButton" name="btnMap1">
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>280</y>
+     <y>370</y>
      <width>270</width>
      <height>70</height>
     </rect>
@@ -70,14 +70,14 @@ QPushButton:pressed {
 }</string>
    </property>
    <property name="text">
-    <string>EASY</string>
+    <string>MAP 1</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnMedium">
+  <widget class="QPushButton" name="btnMap2">
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>380</y>
+     <y>470</y>
      <width>270</width>
      <height>70</height>
     </rect>
@@ -102,46 +102,14 @@ QPushButton:pressed {
 }</string>
    </property>
    <property name="text">
-    <string>MEDIUM</string>
+    <string>MAP 2</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnExpert">
+  <widget class="QPushButton" name="btnMap3">
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>580</y>
-     <width>270</width>
-     <height>70</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {
-    background-color: #9C27B0; /* Màu tím */
-    border-color: #7B1FA2; /* Viền tím đậm */
-    border-radius: 25px;           /* Bo góc tròn */
-    color: #ffffff;                /* Màu chữ trắng */
-    font-family: bungee; /* Font chữ gọn gàng */
-    font-size: 20px;               /* Kích thước chữ */
-}
-
-QPushButton:hover {
-    border-color: white; /* Đổi viền sang trắng khi hover */
-    background-color: rgba(255, 255, 255, 0.1); /* Thêm hiệu ứng sáng */
-}
-
-QPushButton:pressed {
-    background-color: rgba(255, 255, 255, 0.2); /* Hiệu ứng nhấn */
-}</string>
-   </property>
-   <property name="text">
-    <string>EXPERT</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btnHard">
-   <property name="geometry">
-    <rect>
-     <x>560</x>
-     <y>480</y>
+     <y>570</y>
      <width>270</width>
      <height>70</height>
     </rect>
@@ -166,14 +134,14 @@ QPushButton:pressed {
 }</string>
    </property>
    <property name="text">
-    <string>HARD</string>
+    <string>MAP 3</string>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>280</y>
+     <x>120</x>
+     <y>350</y>
      <width>331</width>
      <height>501</height>
     </rect>
@@ -186,57 +154,6 @@ QPushButton:pressed {
    </property>
    <property name="scaledContents">
     <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>920</x>
-     <y>490</y>
-     <width>301</width>
-     <height>321</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap>../image/dog.png</pixmap>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btnBack">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>40</width>
-     <height>40</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {
-    background-color: transparent; /* Làm nền trong suốt */
-    border: none; /* Xóa đường viền */
-}</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="icon">
-    <iconset>
-     <normaloff>../image/ic_back.png</normaloff>../image/ic_back.png</iconset>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>50</width>
-     <height>50</height>
-    </size>
-   </property>
-   <property name="checkable">
-    <bool>false</bool>
    </property>
   </widget>
  </widget>
