--- a/ui/main.ui
+++ b/ui/main.ui
@@ -87,73 +87,6 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnHint">
-   <property name="geometry">
-    <rect>
-     <x>1310</x>
-     <y>440</y>
-     <width>50</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {
-    background-color: transparent; /* Làm nền trong suốt */
-    border: none; /* Xóa đường viền */
-}</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="icon">
-    <iconset>
-     <activeoff>../image/ic_lightbulb.png</activeoff>
-     <activeon>../image/ic_lightbulb_on.png</activeon>
-    </iconset>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>50</width>
-     <height>50</height>
-    </size>
-   </property>
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btnPlay">
-   <property name="geometry">
-    <rect>
-     <x>1310</x>
-     <y>550</y>
-     <width>50</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {
-    background-color: transparent; /* Làm nền trong suốt */
-    border: none; /* Xóa đường viền */
-}</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="icon">
-    <iconset>
-     <normaloff>../image/ic_stop.png</normaloff>
-     <normalon>../image/ic_play.png</normalon>../image/ic_stop.png</iconset>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>50</width>
-     <height>50</height>
-    </size>
-   </property>
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QPushButton" name="btnBack">
    <property name="geometry">
     <rect>
@@ -190,7 +123,7 @@
    <property name="geometry">
     <rect>
      <x>1310</x>
-     <y>660</y>
+     <y>440</y>
      <width>50</width>
      <height>50</height>
     </rect>
@@ -207,6 +140,38 @@
    <property name="icon">
     <iconset>
      <normaloff>../image/ic_renew.png</normaloff>../image/ic_renew.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>50</width>
+     <height>50</height>
+    </size>
+   </property>
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnPath">
+   <property name="geometry">
+    <rect>
+     <x>1310</x>
+     <y>540</y>
+     <width>61</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+    background-color: transparent; /* Làm nền trong suốt */
+    border: none; /* Xóa đường viền */
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../image/path.png</normaloff>../image/path.png</iconset>
    </property>
    <property name="iconSize">
     <size>
