--- a/ui/main.ui
+++ b/ui/main.ui
@@ -32,10 +32,10 @@
   <widget class="QLabel" name="lblTime">
    <property name="geometry">
     <rect>
-     <x>595</x>
+     <x>550</x>
      <y>790</y>
-     <width>211</width>
-     <height>71</height>
+     <width>261</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -51,14 +51,14 @@
 }</string>
    </property>
    <property name="text">
-    <string>05 : 20</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:36pt;&quot;&gt;05 : 20&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QPushButton" name="btnMusic">
    <property name="geometry">
     <rect>
-     <x>1310</x>
-     <y>330</y>
+     <x>1290</x>
+     <y>420</y>
      <width>50</width>
      <height>50</height>
     </rect>
@@ -108,70 +108,6 @@
    <property name="icon">
     <iconset>
      <normaloff>../image/ic_back.png</normaloff>../image/ic_back.png</iconset>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>50</width>
-     <height>50</height>
-    </size>
-   </property>
-   <property name="checkable">
-    <bool>false</bool>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btnReNew">
-   <property name="geometry">
-    <rect>
-     <x>1310</x>
-     <y>440</y>
-     <width>50</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {
-    background-color: transparent; /* Làm nền trong suốt */
-    border: none; /* Xóa đường viền */
-}</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="icon">
-    <iconset>
-     <normaloff>../image/ic_renew.png</normaloff>../image/ic_renew.png</iconset>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>50</width>
-     <height>50</height>
-    </size>
-   </property>
-   <property name="checkable">
-    <bool>false</bool>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btnPath">
-   <property name="geometry">
-    <rect>
-     <x>1310</x>
-     <y>540</y>
-     <width>61</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {
-    background-color: transparent; /* Làm nền trong suốt */
-    border: none; /* Xóa đường viền */
-}</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="icon">
-    <iconset>
-     <normaloff>../image/path.png</normaloff>../image/path.png</iconset>
    </property>
    <property name="iconSize">
     <size>
