--- a/ui/level.ui
+++ b/ui/level.ui
@@ -19,10 +19,10 @@
   <widget class="QLabel" name="lblTime">
    <property name="geometry">
     <rect>
-     <x>570</x>
+     <x>550</x>
      <y>260</y>
-     <width>251</width>
-     <height>81</height>
+     <width>271</width>
+     <height>101</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -38,10 +38,10 @@
 }</string>
    </property>
    <property name="text">
-    <string>LEVEL</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:30pt;&quot;&gt;CHOOSE&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnEasy">
+  <widget class="QPushButton" name="btnMap1">
    <property name="geometry">
     <rect>
      <x>560</x>
@@ -70,10 +70,10 @@ QPushButton:pressed {
 }</string>
    </property>
    <property name="text">
-    <string>EASY</string>
+    <string>MAP 1</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnMedium">
+  <widget class="QPushButton" name="btnMap2">
    <property name="geometry">
     <rect>
      <x>560</x>
@@ -102,10 +102,10 @@ QPushButton:pressed {
 }</string>
    </property>
    <property name="text">
-    <string>MEDIUM</string>
+    <string>MAP 2</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnHard">
+  <widget class="QPushButton" name="btnMap3">
    <property name="geometry">
     <rect>
      <x>560</x>
@@ -134,14 +134,14 @@ QPushButton:pressed {
 }</string>
    </property>
    <property name="text">
-    <string>HARD</string>
+    <string>MAP 3</string>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>340</y>
+     <x>120</x>
+     <y>350</y>
      <width>331</width>
      <height>501</height>
     </rect>
