--- a/ui/main.ui
+++ b/ui/main.ui
@@ -58,7 +58,7 @@
    <property name="geometry">
     <rect>
      <x>1290</x>
-     <y>420</y>
+     <y>400</y>
      <width>50</width>
      <height>50</height>
     </rect>
@@ -117,6 +117,39 @@
    </property>
    <property name="checkable">
     <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnPath">
+   <property name="geometry">
+    <rect>
+     <x>1290</x>
+     <y>520</y>
+     <width>50</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+    background-color: transparent; /* Làm nền trong suốt */
+    border: none; /* Xóa đường viền */
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../image/path.png</normaloff>
+     <normalon>../image/path_on.png</normalon>../image/path.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>50</width>
+     <height>50</height>
+    </size>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
