--- a/ui/algorithm.ui
+++ b/ui/algorithm.ui
@@ -172,8 +172,8 @@ QPushButton:pressed {
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>340</y>
+     <x>160</x>
+     <y>350</y>
      <width>331</width>
      <height>501</height>
     </rect>
@@ -182,7 +182,7 @@ QPushButton:pressed {
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../image/actor_sayhi.png</pixmap>
+    <pixmap>../image/actor_sayhi2.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
