--- a/ui/start.ui
+++ b/ui/start.ui
@@ -146,17 +146,17 @@ QLabel#title {
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>570</x>
       <y>450</y>
       <width>291</width>
-      <height>381</height>
+      <height>391</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>../image/actor_run.png</pixmap>
+     <pixmap>../image/actor_run2.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -165,8 +165,8 @@ QLabel#title {
    <widget class="QPushButton" name="btnStart">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>370</y>
+      <x>600</x>
+      <y>350</y>
       <width>231</width>
       <height>71</height>
      </rect>
